@@ -1,5 +1,5 @@
 Package: GWASTools
-Version: 1.3.1
+Version: 1.3.2
 Type: Package
 Title: Tools for Genome Wide Association Studies
 Description: Classes for storing very large GWAS data sets and annotation, and functions for GWAS data cleaning and analysis.
@@ -9,7 +9,7 @@ Depends: Biobase, ncdf, GWASExactHW, sandwich
 Imports: methods, DBI, RSQLite, DNAcopy, survival, lmtest
 Suggests: GWASdata, RUnit, gdsfmt, SNPRelate
 License: Artistic-2.0
-LazyLoad: yes
+LazyData: yes
 biocViews: SNP, GeneticVariability, QualityControl, Microarray
 Collate: utils.R AllGenerics.R AllClasses.R
   Methods-ScanAnnotationDataFrame.R Methods-SnpAnnotationDataFrame.R
