@@ -24,11 +24,10 @@ ibdAssignRelatedness <- function(
         dup.sel <- k0 < dup.w & k1 < dup.h
 
         # identify full sibs, half sibs, first cousins
-        rmv <- get(data(relationsMeanVar))
  
 	# to identify full sibs within the ellipse - 
 
-        FS<-rmv$FullSibs
+        FS<-relationsMeanVar$FullSibs
         mean.vec<-FS$mean  #vector
         sig.inv<-FS$invCov
         n0<-length(k0)
@@ -45,7 +44,7 @@ ibdAssignRelatedness <- function(
         sdm<-abs(qnorm(alpha/2))  # sd multiplier for determining half-sib, first cousin rectangles
 	# to identify half-sibs within rectangle parallel to diagonal
 	# ends of the rectangle on the diagonal
-        HS<-rmv$HalfSibs
+        HS<-relationsMeanVar$HalfSibs
         d<-sdm*sqrt(HS$var) # +/- d from k1-mean gives 100(1-alpha)% prediction interval for k1
         hsm<-HS$mean[2]
         y1<-hsm-d;x1<-1-y1
@@ -60,7 +59,7 @@ ibdAssignRelatedness <- function(
 
 	# to identify first cousins within the rectangle parallel to diagonal
 	# ends of the rectangle on the diagonal
-        C<-rmv$FirstCousins
+        C<-relationsMeanVar$FirstCousins
         d<-sdm*sqrt(C$var)
         fcm<-C$mean[2]
         y1<-fcm-d;x1<-1-y1
