@@ -10,7 +10,6 @@ Generates a manhattan plot of the results of a genome wide association test.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \usage{
 manhattanPlot(p, chromosome, 
-              chrom.labels = c(1:22,"X","XY","Y","M"),
               ylim = NULL, trunc.lines = TRUE,
               signif = 5e-8, ...)
 }
@@ -21,9 +20,7 @@ manhattanPlot(p, chromosome,
 \arguments{
 
   \item{p}{A vector of p-values.}
-  \item{chromosome}{A vector containing the integer chromosome ID for each SNP.}
-  \item{chrom.labels}{A vector of chromosome names to use in the
-    plot.}
+  \item{chromosome}{A vector containing the chromosome for each SNP.}
   \item{ylim}{The limits of the y axis.  If NULL, the y axis is \code{(0,
     log10(length(p)) + 4)}.}
   \item{trunc.lines}{Logical value indicating whether to show truncation
@@ -38,6 +35,10 @@ manhattanPlot(p, chromosome,
 \details{
   Plots -log10(p) versus chromosome.  Point size is scaled so that
   smaller p values have larger points.
+
+  \code{p} must have the same length as \code{chromosome} and is
+  assumed to be in order of position on each chromosome.  Values within
+  each chromosome are evenly spaced along the X axis.
 
   Plot limits are determined as follows: if \code{ylim} is provided, any
   points with \code{-log10(p) > ylim[2]} are plotted as triangles at the
@@ -62,8 +63,8 @@ manhattanPlot(p, chromosome,
 \examples{
 n <- 1000
 pvals <- sample(-log10((1:n)/n), n, replace=TRUE)
-chromosome <- c(rep(1,500), rep(2,500))
-manhattanPlot(pvals, chromosome, chrom.labels=c(1,2), signif=1e-7)
+chromosome <- c(rep(1,250), rep(2,250), rep("X",250), rep("Y",250))
+manhattanPlot(pvals, chromosome, signif=1e-7)
 }
 
 
