@@ -10,7 +10,6 @@ Plots SNP correlation versus chromosome.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \usage{
 snpCorrelationPlot(correlations, chromosome, 
-                   chrom.labels = c(1:22,"X","XY","Y","M"),
                    ylim=c(0,1), ylab = "abs(correlation)", ...)
 }
 
@@ -20,9 +19,7 @@ snpCorrelationPlot(correlations, chromosome,
 \arguments{
 
   \item{correlations}{A vector of correlations.}
-  \item{chromosome}{A vector containing the integer chromosome ID for each SNP.}
-  \item{chrom.labels}{A vector of chromosome names to use in the
-    plot.}
+  \item{chromosome}{A vector containing the chromosome for each SNP.}
   \item{ylim}{The limits of the y axis.}
   \item{ylab}{The label for the y axis.}
   \item{\dots}{Other parameters to be passed directly to \code{\link{plot}}.}
@@ -31,9 +28,12 @@ snpCorrelationPlot(correlations, chromosome,
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \details{
-  Plots SNP correlations (from, e.g., PCA), versus chromosome.  SNPs are
-  evenly spaced along the X axis, so \code{correlations} should
-  be in order of position on the chromosome.
+  Plots SNP correlations (from, e.g., PCA), versus chromosome.  
+  
+  \code{correlations} must have the same length as \code{chromosome} and is
+  assumed to be in order of position on each chromosome.  Values within
+  each chromosome are evenly spaced along the X axis.
+
 }
 
 \author{Cathy Laurie
@@ -50,8 +50,8 @@ snpCorrelationPlot(correlations, chromosome,
 
 \examples{
 correlations <- sample(0.01*(0:100), 100, replace=TRUE)
-chromosome <- c(rep(1,50), rep(2,50))
-snpCorrelationPlot(correlations, chromosome, chrom.labels=c(1,2))
+chromosome <- c(rep(1,25), rep(2,25), rep("X",25), rep("Y",25))
+snpCorrelationPlot(correlations, chromosome)
 }
 
 
